data/derived/fa15/progs/unify/prog1518.ml.out
Characters 190-194:
  List.fold_left f base args;;
                        ^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int list
